--- a/newsWeb/newsweb/src/components/ListNews/NoticiaCard/NoticiaCard.scss
+++ b/newsWeb/newsweb/src/components/ListNews/NoticiaCard/NoticiaCard.scss
@@ -1,4 +1,11 @@
-.foto{
-    width: 70vw;
-    height: 30vh;
+.card{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+
+    >.titulo{
+        font-weight: bold;
+        }.foto{
+            width: 70vw;
+            height: 30vh;
+    }
 }
