--- a/newsWeb/newsweb/src/components/Footer/Footer.scss
+++ b/newsWeb/newsweb/src/components/Footer/Footer.scss
@@ -4,9 +4,13 @@ footer{
     @include flex-row();
     background: rgb(161, 130, 247);
     height: 6vh;
-    justify-content: baseline;
+    width:100%;
+    margin-top: 30px;
+    justify-content: center;
     box-shadow: 5px 5px 15px 5px grey;
+    text-align: center;
+    align-content: center;
 }
 h5{
-    margin: 10px;
+    margin: 10px 0px 10px 40px;
 }
