--- a/newsWeb/newsweb/src/components/Head/Head.scss
+++ b/newsWeb/newsweb/src/components/Head/Head.scss
@@ -1,8 +1,9 @@
 .container{
     width:100vw;
-
+    
     >.news-head{
         font-family: sans-serif;
+        margin-top: 30px;
         }
         .logo{
             width:100vw;
