--- a/newsWeb/newsweb/src/components/ListNews/NoticiaCard/NoticiaCard.scss
+++ b/newsWeb/newsweb/src/components/ListNews/NoticiaCard/NoticiaCard.scss
@@ -7,5 +7,7 @@
         }.foto{
             width: 70vw;
             height: 30vh;
+            box-shadow: 5px 5px 15px 5px rgb(133, 84, 247);
+            border-radius: 15px;
     }
 }
